[gd_scene load_steps=4 format=3 uid="uid://bq6qxm7wgrevk"]

[ext_resource type="Script" path="res://Test/uTest.gd" id="1_hqxxd"]
[ext_resource type="Script" path="res://Components/TimerProgress/timer_bar.gd" id="2_1px86"]
[ext_resource type="PackedScene" uid="uid://ip2r3i1qoyw2" path="res://Components/dragable_panel/dragable_panel.tscn" id="3_qv811"]

[node name="uTest" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hqxxd")

[node name="sub_viewport_container" type="SubViewportContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="sub_viewport" type="SubViewport" parent="sub_viewport_container"]
disable_3d = true
handle_input_locally = false
size = Vector2i(188, 334)
render_target_update_mode = 0

[node name="dragable_panel" parent="sub_viewport_container/sub_viewport" instance=ExtResource("3_qv811")]
anchor_left = 0.0319149
anchor_top = 0.0149701
anchor_right = 0.0319149
anchor_bottom = 0.0149701
offset_left = 39.6596
offset_top = 57.3353
offset_right = 120.66
offset_bottom = 107.335
grow_horizontal = 1
grow_vertical = 1

[node name="sub_viewport2" type="SubViewport" parent="sub_viewport_container"]
handle_input_locally = false
render_target_update_mode = 0

[node name="tab_container" type="TabContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
current_tab = 1

[node name="s0" type="ScrollContainer" parent="tab_container"]
visible = false
layout_mode = 2

[node name="v0" type="VBoxContainer" parent="tab_container/s0"]
layout_mode = 2

[node name="h0" type="HBoxContainer" parent="tab_container/s0/v0"]
layout_mode = 2

[node name="randomi" type="Button" parent="tab_container/s0/v0/h0"]
layout_mode = 2
text = "randomi"

[node name="line_edit" type="LineEdit" parent="tab_container/s0/v0/h0"]
layout_mode = 2

[node name="h1" type="HBoxContainer" parent="tab_container/s0/v0"]
layout_mode = 2

[node name="randomf" type="Button" parent="tab_container/s0/v0/h1"]
layout_mode = 2
text = "randomf"

[node name="line_edit" type="LineEdit" parent="tab_container/s0/v0/h1"]
layout_mode = 2

[node name="h2" type="HBoxContainer" parent="tab_container/s0/v0"]
layout_mode = 2

[node name="uid" type="Button" parent="tab_container/s0/v0/h2"]
layout_mode = 2
text = "uid"

[node name="line_edit" type="LineEdit" parent="tab_container/s0/v0/h2"]
layout_mode = 2

[node name="h3" type="HBoxContainer" parent="tab_container/s0/v0"]
layout_mode = 2

[node name="pick" type="Button" parent="tab_container/s0/v0/h3"]
layout_mode = 2
text = "pick"

[node name="h4" type="HBoxContainer" parent="tab_container/s0/v0"]
layout_mode = 2

[node name="hit" type="Button" parent="tab_container/s0/v0/h4"]
layout_mode = 2
text = "hit"

[node name="h5" type="HBoxContainer" parent="tab_container/s0/v0"]
layout_mode = 2

[node name="loot" type="Button" parent="tab_container/s0/v0/h5"]
layout_mode = 2
text = "loot"

[node name="h6" type="HBoxContainer" parent="tab_container/s0/v0"]
layout_mode = 2

[node name="import_monster" type="Button" parent="tab_container/s0/v0/h6"]
layout_mode = 2
text = "import_monster"

[node name="file_select" type="FileDialog" parent="tab_container/s0/v0/h6"]
unique_name_in_owner = true
title = "Open a File"
initial_position = 2
size = Vector2i(640, 480)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.csv")

[node name="h7" type="HBoxContainer" parent="tab_container/s0/v0"]
layout_mode = 2

[node name="getter" type="Button" parent="tab_container/s0/v0/h7"]
layout_mode = 2
text = "getter_test"

[node name="s1" type="ScrollContainer" parent="tab_container"]
layout_mode = 2

[node name="v_box_container" type="VBoxContainer" parent="tab_container/s1"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="v_box_container2" type="VBoxContainer" parent="tab_container/s1/v_box_container"]
layout_mode = 2

[node name="prg_cup" type="ProgressBar" parent="tab_container/s1/v_box_container/v_box_container2"]
layout_mode = 2
script = ExtResource("2_1px86")

[node name="btn_cpu" type="Button" parent="tab_container/s1/v_box_container/v_box_container2"]
layout_mode = 2
text = "cpu"

[node name="v_box_container3" type="VBoxContainer" parent="tab_container/s1/v_box_container"]
layout_mode = 2
size_flags_vertical = 3

[node name="v_box_container" type="VBoxContainer" parent="tab_container/s1/v_box_container"]
layout_mode = 2

[node name="btn_player" type="Button" parent="tab_container/s1/v_box_container/v_box_container"]
layout_mode = 2
text = "player"

[node name="prg_player" type="ProgressBar" parent="tab_container/s1/v_box_container/v_box_container"]
layout_mode = 2
script = ExtResource("2_1px86")

[node name="tree" type="Tree" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
columns = 4
column_titles_visible = true
enable_recursive_folding = false
hide_root = true
select_mode = 2

[connection signal="pressed" from="tab_container/s0/v0/h0/randomi" to="." method="_el_test_randomi"]
[connection signal="pressed" from="tab_container/s0/v0/h1/randomf" to="." method="_el_test_randomf"]
[connection signal="pressed" from="tab_container/s0/v0/h2/uid" to="." method="_el_test_uid"]
[connection signal="pressed" from="tab_container/s0/v0/h3/pick" to="." method="_el_test_pick"]
[connection signal="pressed" from="tab_container/s0/v0/h4/hit" to="." method="_el_test_hit"]
[connection signal="pressed" from="tab_container/s0/v0/h5/loot" to="." method="_el_test_loot"]
[connection signal="pressed" from="tab_container/s0/v0/h6/import_monster" to="." method="_import_monsters"]
[connection signal="pressed" from="tab_container/s0/v0/h7/getter" to="." method="_setter_getter_test"]
[connection signal="pressed" from="tab_container/s1/v_box_container/v_box_container2/btn_cpu" to="." method="_on_btn_cpu_pressed"]
